upgrade lib